style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html,
body {
    height: 100%;
    width: 100%;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

main {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

/*
==================
   Navbar Styles
==================
*/

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 30px;
    position: absolute;
    width: 100%;
}

nav img {
    height: 80px;
    cursor: pointer;
}

nav i {
    font-size: 40px;
    color: #110e07;
    cursor: pointer;
}

/*
==================
   Body Styles
==================
*/

.container {
    height: 100%;
    width: 100%;
    display: flex;
}

/* left */

.left {
    height: 100%;
    width: 60%;
    background-color: #fcc60c;
    padding: 0px 60px;
}

.left .details {
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
    top: 20%;
}

.details h6 {
    font-size: 20px;
    font-weight: 700;
    letter-spacing: 5px;
}

.details h1 {
    padding: 0px;
    font-size: 200px;
    font-weight: 700;
    letter-spacing: 5px;
    margin-left: -10px;
}

.details p {
    font-size: 20px;
    font-weight: 400;
    width: 40%;
    line-height: 1.5;
}

.details .page-indicator {
    display: flex;
    align-items: center;
    gap: 15px;
    font-size: 15px;
    font-weight: 700;
    letter-spacing: 1px;
    margin-top: 30px;
}

.details .page-indicator .line {
    height: 2px;
    width: 40px;
    background-color: #110e07;
}


.details img {
    height: 250px;
    width: 250px;
    position: relative;
    top: 70px;
    left: -40px;
    opacity: 0.3;

}

/* Right */

.right {
    height: 100%;
    width: 40%;
    background-color: #f5edd6;
    position: relative;
}

.right img {
    position: relative;
    right: 26%;
    top: 15%;
    transform: scale(1.1);
}

.slider-dots {
    position: absolute;
    right: 40px;
    top: 50%;
    transform: translateY(-50%);
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.circle {
    height: 12px;
    width: 12px;
    border-radius: 50%;
    background-color: #fcc60c;
    cursor: pointer;
}

.circle.active {
    background-color: #110e07;
}

